# tesis-ecg-mono

./: .gitignore  AGENTS.md  Arquitectura.drawio  CLAUDE.md  Online Gantt Chart 2026.gantt  README.md  Requerimientos.md  analisis-wecan.md  cronograma.gantt  docker-compose.yml
back/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 001_initial.py  002_auth.py  003_schema_alignment.py  4940f777d181_initial_schema.py
back/app/: main.py
back/app/core/: auth0_client.py  config.py  logging.py  security.py
back/app/db/: base.py  session.py
back/app/db/models/: __init__.py  alert.py  audit_event.py  device.py  doctor.py  ecg_batch.py  ecg_event.py  patient.py  study.py  user.py
back/app/dependencies/: auth_dependencies.py  common_dependencies.py
back/app/ml/: arrhythmia.py  decompression.py  hrv.py  pipeline.py  rpeak_detection.py
back/app/modules/admin/: __init__.py  admin_repository.py  admin_routes.py  admin_schemas.py  admin_service.py
back/app/modules/alerts/: __init__.py  alerts_repository.py  alerts_routes.py  alerts_schemas.py  alerts_service.py
back/app/modules/auth/: __init__.py  auth_repository.py  auth_routes.py  auth_schemas.py  auth_service.py
back/app/modules/devices/: __init__.py  devices_repository.py  devices_routes.py  devices_schemas.py  devices_service.py
back/app/modules/doctors/: __init__.py  (+4 more)
back/docs/: README.md
back/docs/backend/: 01-arquitectura.md  02-modelos.md  03-endpoints.md  04-autenticacion.md  05-pipeline-ml.md  06-setup-local.md
back/tests/: conftest.py
(+180 files in other folders)
